# son_of_den

./: .env.example  .gitignore  CLAUDE.md  GITHUB_PROFILE_README.md  README.md  personas.yaml  pyproject.toml
claudebots/: __main__.py  bots.py
claudebots/core/: ai_registry.py  alerts.py  calendar_client.py  circuit_breaker.py  claude_client.py  config.py  conversation.py  feed_monitor.py  gemini_client.py  groq_client.py  icloud_calendar_client.py  meters_client.py  obsidian_client.py  openmodel_client.py  openrouter_client.py  personas.py  scheduling.py  sheets_client.py  state.py  task_utils.py
claudebots/routers/: admin.py  briefing.py  business.py  daily_news.py  panel.py
claudebots/services/: _dl_utils.py  insta_downloader.py  search_client.py  social_downloader.py  yt_downloader.py
deploy/: telegram-claude-bots.service
tests/: conftest.py
tests/integration/: conftest.py  test_admin_router.py  test_business_router.py  test_forward_trigger.py  test_panel_router.py
tests/unit/: test_admin_router.py  test_ai_registry.py  test_alerts.py  test_bots.py  test_briefing.py  test_budget_monitor.py  test_business_router.py  test_calendar_client.py  test_circuit_breaker.py  test_claude_client.py  test_config.py  test_conversation.py  test_daily_news.py  test_feed_monitor.py  test_groq_client.py  test_help_routing.py  test_mod_html.py  test_obsidian_client.py  test_openmodel_client.py  test_openrouter_client.py  test_personas.py  test_scheduling.py  test_search_client.py  test_social_downloader.py  test_state.py  test_yt_downloader.py
