[project]
name = "telegram-claude-bots"
version = "0.1.0"
description = "Telegram Business auto-responder + multi-agent panel discussion on Claude"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.14.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "groq>=0.13.0",
    "httpx>=0.27.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "PyYAML>=6.0",
    "google-auth>=2.29.0",
    "google-api-python-client>=2.128.0",
    "yt-dlp>=2026.3.17",
    "pypdf>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["e2e: end-to-end tests requiring real Telegram tokens"]
addopts = "-m 'not e2e'"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["claudebots/core"]

[[tool.mypy.overrides]]
module = "claudebots.routers.*"
ignore_errors = true
